force-app/main/default/objects/proh__Deleted_Staging_Record__c/proh__Deleted_Staging_Record__c.object-meta.xml
<CustomObject>
    <label>Deleted Staging Record</label>
    <nameField>
        <displayFormat>DSR-{0}</displayFormat>
        <label>Deleted Staging Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deleted Staging Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>