force-app/main/default/objects/proh__Deleted_Staging_Record__c/fields/proh__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>proh__Object_Name__c</fullName>
    <label>Object Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>