force-app/main/default/objects/proh__Deleted_Staging_Record__c/fields/proh__ProcessingHub_Id__c.field-meta.xml
<CustomField>
    <fullName>proh__ProcessingHub_Id__c</fullName>
    <externalId>true</externalId>
    <label>ProcessingHub Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>