force-app/main/default/objects/proh__Deleted_Staging_Record__c/fields/proh__Record_Id__c.field-meta.xml
<CustomField>
    <fullName>proh__Record_Id__c</fullName>
    <externalId>true</externalId>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>